--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --surface-color: rgba(255, 255, 255, 0.1);
   --surface-color-hover: rgba(255, 255, 255, 0.2);
   --social-hover: rgba(255, 255, 255, 0.2);
-  --switch-gb: url(./assets/moon-stars.svg)
+  --switch-gb: url(./assets/moon-stars.svg);
 }
 
 .light {
@@ -21,11 +21,12 @@
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --social-hover: rgba(0, 0, 0, 0.1);
-  --switch-gb: url(./assets/sun.svg)
+  --switch-gb: url(./assets/sun.svg);
 }
 
 body {
   background: var(--bg) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -61,7 +62,6 @@ body * {
   position: relative;
   width: 64px;
   margin: 4px auto;
- 
 }
 
 #switch button {
@@ -79,8 +79,8 @@ body * {
 }
 
 .light #switch button {
-   right: 0%;
-   left: initial;
+  right: 0%;
+  left: initial;
 }
 
 #switch span {
@@ -154,4 +154,15 @@ footer {
   padding: 24px;
   text-align: center;
   font-size: 14px;
+}
+
+/*media queries*/
+
+@media (min-width: 700px) {
+  :root {
+    --bg: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg: url(./assets/bg-desktop-light.jpg);
+  }
 }
